--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.2
         with:
-          cache: pnpm
+          cache: 'pnpm'
       - run: pnpm i
       - run: pnpm run build
       - name: Checkout
