--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,14 +29,17 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v4.0.2
-        with:
-          cache: 'pnpm'
-      - run: pnpm i
-      - run: pnpm run build
       - name: Checkout
         uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
