--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,8 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
+      - name: Build page 
+        run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
