--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,14 +41,10 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Build page 
-        run: npm run build
+        run: pnpm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # Upload entire repository
-          path: './dist'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          folder: dist # The folder the action should deploy.
